# sok-project-graph-visualizer

./: README.md  clear.py  requirements.txt  run.py  run.sh
api/: pyproject.toml
api/api/interfaces/: base_plugin.py  data_source_plugin.py  visualizer_plugin.py
api/api/models/: graph.py  link.py  node.py  workspace.py
api/api/services/: search_filter.py  utils.py
api/api/utils/: custom_json_encoder.py
api/models/: edge.py  graph.py  node.py
block_visualizer/: pyproject.toml
block_visualizer/block_visualizer/: block_visualizer.py
block_visualizer/block_visualizer/static/: visualize.js
core/: pyproject.toml
core/src/core/use_cases/: const.py  plugin_recognition.py  workspace_management.py
graph_explorer/: pyproject.toml
graph_explorer/graph_explorer/: apps.py  asgi.py  cli.py  settings.py  urls.py  views.py  wsgi.py
graph_explorer/graph_explorer/static/: style.css  treeview-style.css  treeview.js
graph_explorer/graph_explorer/templates/: index.html
json_data_source/: json_data_source.py  pyproject.toml
json_data_source/data/: expanded_org_structure.json  large_dataset.json  test.json
platform/: pyproject.toml
rdf_data_source/: pyproject.toml  rdf_data_source.py
rdf_data_source/data/: large_dataset.ttl  test.ttl
simple_visualizer/: pyproject.toml
simple_visualizer/simple_visualizer/: __init__.py  simple_visualizer.py
simple_visualizer/simple_visualizer/static/: visualize.js
xml_data_source/: pyproject.toml  xml_data_source.py
xml_data_source/data/: large_dataset.xml  test.xml  university.xml
