[project]
name = "block_visualizer"
version = "0.1"
description = "Block Visualizer"
dependencies = [
    "graph_exploerer_api==0.1"
]

[project.entry-points."core.visualizer"]
block_visualizer = "block_visualizer.block_visualizer:BlockVisualizerPlugin"

[tool.setuptools.data-files]
templates = ["block_visualizer/static/*"]